# 420-colours

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
